<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/upcoming_actionbar_watchlist"
          android:icon="@android:drawable/ic_menu_today"
          android:title="@string/watchlist"
          app:showAsAction="ifRoom"/>

    <item android:id="@+id/upcoming_actionbar_search"
          android:icon="@drawable/ic_action_search"
          android:title="@string/search"
          app:showAsAction="ifRoom"/>

    <item android:id="@+id/upcoming_actionbar_reload"
          android:title="@string/reload"
          app:showAsAction="never"/>

    <item android:id="@+id/upcoming_actionbar_settings"
          android:title="@string/settings"
          app:showAsAction="never"/>

    <item android:id="@+id/upcoming_actionbar_logout"
          android:title="@string/logout"
          app:showAsAction="never"/>
</menu>